# switchboard-plug-onlineaccounts

./: .travis.yml  CMakeLists.txt  README  README.md  meson.build  plug.plugin
data/: AccountRow.css  CMakeLists.txt  com.google.code.AccountsSSO.gSingleSignOnUI.service.cmake  gresource.xml  meson.build  online-accounts-daemon.desktop.in  onlineaccounts.appdata.xml.in  onlineaccounts.gresource.xml  onlineaccounts.metainfo.xml.in  pantheon-plug-onlineaccounts.desktop  plug.css
data/Facebook/: CMakeLists.txt  config.vala  facebook.provider
data/Flickr/: flickr.vala
data/Google/: CMakeLists.txt  config.vala  google-drive.service  google-gmail.service  webview.vala
data/Microsoft/: Microsoft.vala
data/Twitter/: CMakeLists.txt  twitter-microblog.service
data/Yahoo/: yahoo.provider
data/gSSO-ui/: CMakeLists.txt  com.google.code.AccountsSSO.gSingleSignOnUI.service.cmake  gsso-ui-gtk-dialog.ui  gsso-ui-web-dialog.ui
data/service_types/: calendar.service-type  contacts.service-type  mail.service-type
extension/: CMakeLists.txt  Extension.vala  Keyring.vala  StorageManager.vala  Tables.vala
plugins/: CMakeLists.txt
plugins/Facebook/: CMakeLists.txt  FacebookProvider.vala  config.vala  facebook-im.service  facebook-sharing.service  facebook.plugin  facebook.provider  facebook.vala
plugins/Flickr/: CMakeLists.txt  config.vala  flickr-microblog.service
plugins/Generic-OAuth/: CMakeLists.txt  OAuth.vala  OAuthProvider.vala  generic-oauth.plugin
plugins/Google/: CMakeLists.txt  GoogleProvider.vala  config.vala  google-calendar.service  google-contacts.service  google-drive.service  google-gmail.service  google-im.service  google-picasa.service  google.plugin  google.provider  google.vala  picasa.service
plugins/Methods/: CMakeLists.txt
plugins/Microsoft/: CMakeLists.txt  Microsoft.vala  MicrosoftProvider.vala  config.vala  login.live.com.conf  microsoft.provider
plugins/OAuth-Subplugins/: CMakeLists.txt
plugins/Providers/: CMakeLists.txt
plugins/Twitter/: api.twitter.com.conf  config.vala  twitter.provider
po/: CMakeLists.txt  POTFILES  POTFILES-PROVIDERS  POTFILES-SERVICES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  btk.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  (+168 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+160 more)
po/its/: accounts-application.its  accounts-application.loc  accounts-provider.its  accounts-provider.loc  accounts-service-type.its  accounts-service-type.loc  accounts-service.its  accounts-service.loc
providers/: CMakeLists.txt  meson.build
providers/CalDAV/: caldav.provider  caldav.service  meson.build
providers/Facebook/: CMakeLists.txt  Integration.vala  facebook-calendar.service  facebook-contacts.service  facebook-microblog.service  facebook.provider.in  google.provider.in  meson.build
providers/FastMail/: CMakeLists.txt  fastmail-mail.service  fastmail.provider  meson.build
providers/Flickr/: flickr-sharing.service  flickr.provider  flickr.vala  secure.flickr.com.conf
providers/Google/: CMakeLists.txt  Integration.vala  google-calendar.service  google-contacts.service  google-drive.service  google-gmail.service  google-photos.service  google.provider.in  meson.build
providers/LastFM/: CMakeLists.txt  lastfm-scrobble.service  lastfm.provider  meson.build
providers/Mail/: CMakeLists.txt  mail.provider  mail.service  meson.build
providers/Microsoft/: CMakeLists.txt  Integration.vala  Plugin.vala  meson.build  microsoft-calendar.service  microsoft-contacts.service  microsoft-mails.service  microsoft.provider.in  microsoft.vala
providers/Nextcloud/: Integration.vala  meson.build  nextcloud-calendar.service  nextcloud-contacts.service  nextcloud.provider  nextcloud.provider.in
providers/Twitter/: twitter.vala
providers/Yahoo/: yahoo.provider
providers/elementary/: io.elementary.provider  meson.build
providers/iCloud/: com.icloud.provider  meson.build
src/: Account.vala  AccountsManager.vala  AccountsModel.vala  Application.vala  CMakeLists.txt  CaldavView.vala  DBus.vala  Daemon.vala  Keyring.vala  MainView.vala  MainWindow.vala  MethodPlugin.vala  NewAccountDialog.vala  OnlineAccounts.vala  Plug.vala  Plugin.vala  PluginManager.vala  PlugsManager.vala  ProviderPlugin.vala  SubPlugin.vala  Threads.vala  Translation.vala  UIManager.vala  ValidationMessage.vala  config.h.cmake  config.vala.cmake  config.vapi  meson.build  online-accounts-pantheon.pc.cmake  pantheon-online-accounts.deps  pantheon-online-accounts.pc.cmake
src/Authentification/: AbstractAuthDialog.vala  AbstractAuthView.vala  CalDavDialog.vala  Dialog.vala  DialogService.vala  GraphicalDialog.vala  Key.vala  MailDialog.vala  NextcloudDialog.vala  OAuthSettingsDialog.vala  OAuthView.vala  PasswordDialog.vala  RequestInfo.vala  RequestQueue.vala  Server.vala  WebDialog.vala  iCloudDialog.vala
src/Dialogs/: CaldavDialog.vala  ICloudDialog.vala  ImapDialog.vala  WebDavDialog.vala  iCloudDialog.vala
src/Plugins/: OAuthPlugin.vala  Plugin.vala
src/Views/: ACLPopover.vala  ACListBox.vala  AccountDialog.vala  AccountPopOver.vala  AccountView.vala  AddAccountView.vala  SourceSelector.vala
src/Widgets/: ACListBox.vala  AccountMenuItem.vala  AppRow.vala  FinalizePage.vala  PagedDialog.vala  ProviderRow.vala  ServiceRow.vala  ValidationMessage.vala
src/gSSO-ui/: WebDialog.vala  gSSO-ui.vapi  gsso-ui-dbus-glue.c  gsso-ui-dbus-glue.h  gsso-ui-dialog-dbus-glue.c  gsso-ui-dialog-dbus-glue.h  gsso-ui-dialog-service.c  gsso-ui-dialog-service.h  gsso-ui-dialog.c  gsso-ui-dialog.h  gsso-ui-gtk-dialog.c  gsso-ui-gtk-dialog.h  gsso-ui-log.h  gsso-ui-request-queue.c  gsso-ui-request-queue.h  gsso-ui-server.c  gsso-ui-server.h  gsso-ui-types.h  gsso-ui-utils.c  (+4 more)
(+120 files in other folders)
