providers_dir = libaccounts_dep.get_pkgconfig_variable('providerfilesdir', define_variable: ['prefix', prefix])
services_dir = libaccounts_dep.get_pkgconfig_variable('servicefilesdir', define_variable: ['prefix', prefix])

subdir('elementary')
subdir('Facebook')
subdir('FastMail')
subdir('Google')
subdir('LastFM')
subdir('Mail')
subdir('Microsoft')
